--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link rel="icon" href="./repo-app-small.png" />
+    <title>Repo App Idea</title>
   </head>
   <body>
     <div id="root"></div>
